--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,11 @@
       <version>${jetty.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>2.0.0-alpha7</version>
-    </dependency>
-
+      <dependency>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-slf4j-impl</artifactId>
+          <version>${jetty.version}</version>
+      </dependency>
   </dependencies>
 
 </project>
